--- a/LevelEditor/Properties/Resources.resx
+++ b/LevelEditor/Properties/Resources.resx
@@ -131,4 +131,16 @@
   <data name="StopHS" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\StopHS.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="doubleSpeed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\doubleSpeed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="halfSpeed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\halfSpeed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="normalSpeed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\normalSpeed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="addPreviewObject" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\addPreviewObject.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
