--- a/LevelEditor/Properties/Resources.resx
+++ b/LevelEditor/Properties/Resources.resx
@@ -149,4 +149,7 @@
   <data name="increaseSpeed" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\increaseSpeed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ContinueHS" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ContinueHS.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
