--- a/Game/LevelEditor/MainForm.resx
+++ b/Game/LevelEditor/MainForm.resx
@@ -295,6 +295,9 @@
   <metadata name="attachFixture.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1002, 56</value>
   </metadata>
+  <metadata name="drawAssociatedJoints.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1026, 95</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>215</value>
   </metadata>
