--- a/LevelEditor/MainForm.resx
+++ b/LevelEditor/MainForm.resx
@@ -556,4 +556,7 @@
   <metadata name="toolsToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>244, 95</value>
   </metadata>
+  <metadata name="openLevelDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>606, 134</value>
+  </metadata>
 </root>
